--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,5 +15,7 @@ layout: default
   </section>
 </article>
 
+<center><a href="javascript:scroll(0,0)">返回顶部</a></center>
+
 {% include read-more.html %}
 {% include comments.html %}
