--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -42,8 +42,8 @@
     var gitalk = new Gitalk({
 
     // gitalk的主要参数
-		clientID: '4dc42fc50d0e5228f895',
-		clientSecret: '0e6b48d493f30bbae58c9a5752d5e4bc63345a2c',
+		clientID: `4dc42fc50d0e5228f895`,
+		clientSecret: `0e6b48d493f30bbae58c9a5752d5e4bc63345a2c`,
 		repo: 'linusboyle.github.io',
 		owner: 'linusboyle',
 		admin: ['linusboyle'],
