--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -47,6 +47,7 @@
 		repo: 'linusboyle.github.io',
 		owner: 'linusboyle',
 		admin: ['linusboyle'],
+    id: '{{page.title}}',
     labels: ['COMMENTS','GITALK'] 
     });
     gitalk.render('gitalk-container');
