--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 <section class="post-comments">
-  {% if site.comment.disqus %}
+  {% if site.comment.gitalk %}
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
     <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
     <div id="gitalk-container"></div>     
@@ -17,9 +17,7 @@
       });
       gitalk.render('gitalk-container');
     </script> 
-  {% endif %}
-
-  {% elif site.comment.disqus %}
+  {% elsif site.comment.disqus %}
     <div id="disqus_thread"></div>
     <script>
       var disqus_config = function () {
