--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -37,5 +37,5 @@
     </script>
     <noscript>要查看<a href="http://disqus.com/?ref_noscript"> Disqus </a>评论，请启用 JavaScript
     </noscript>
-    
+  {% endif %}    
 </section>
