--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,14 +26,12 @@
 
   <meta name="google-site-verification" content="4oKzvLsEe8ubJtqP9L3B-m9she6kdGriOOlbckdcSW8" />
 
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-    tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-    });
-  </script>
-
-  <script type="text/javascript" async
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+  <!--<script type="text/x-mathjax-config">-->
+    <!--MathJax.Hub.Config({-->
+    <!--tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}-->
+    <!--});-->
+  <!--</script>-->
+  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 </head>
