--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,8 +7,8 @@
       var gitalk = new Gitalk({
 
       // gitalk的主要参数
-      clientID: '{{site.comment.gitalk.clientID}}',
-      clientSecret: '{{site.comment.gitalk.clientSecret}}',
+      clientID: `{{site.comment.gitalk.clientID}}`,
+      clientSecret: `{{site.comment.gitalk.clientSecret}}`,
       repo: '{{site.comment.gitalk.repo}}',
       owner: '{{site.comment.gitalk.owner}}',
       admin: ['{{site.comment.gitalk.owner}}'],
