--- a/_includes/external.html
+++ b/_includes/external.html
@@ -2,6 +2,8 @@
 
 <script type="text/javascript" src="/js/main.js"></script>
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
+
 {% if site.ga.id %}
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{site.ga.id}}"></script>
