add tag page to index,make it accessible from post

--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -15,3 +15,9 @@ layout: default
     {{ content }}
   </section>
 </article>
+
+{% if page.nocomment %}
+  <p></p>
+{% else %}
+  {% include comments.html %}
+{% endif %}
