--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,23 @@
 <section class="footer">
     <footer>
-    	<span class="footer__copyright">本站点采用<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a></span>
-      <span class="footer__copyright">由 <a href="https://jekyllrb.com">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,<a href="https://github.com">感谢Github提供的支持</a></span>
-        <span class="footer__copyright">本站{% if site.creator %}由 {{site.creator}} 创建，{% endif %}采用 <a href="https://github.com/onevcat/vno-jekyll">Vno - Jekyll</a> 作为主题，您可以在 GitHub 找到<a href="https://github.com/linusboyle/linusboyle.github.io">本站源码</a> - &copy; {{site.time | date: "%Y"}}</span>
+    	<span class="footer__copyright">本站点采用
+        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a>
+      </span>
+      <span class="footer__copyright">
+        由 <a href="https://jekyllrb.com",target="_blank">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,感谢<a href="https://github.com">Github</a>提供的支持
+      </span>
+      <span class="footer__copyright">本站
+        {% if site.creator.name %}由
+          {% if site.creator.extralink %}<a href="{{site.creator.extralink}}">{% endif %}
+            @{{site.creator.name}}
+          {% if site.creator.extralink %}</a>{% endif %}
+          创建，
+        {% endif %}
+        采用 <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Vno - Jekyll</a> 作为主题，
+        您可以在此找到
+        <a href="{% if site.repo %}{{site.repo}}{% else %}https://github.com/linusboyle/linusboyle.github.io{% endif %}" target="_blank">
+          本站源码
+        </a> - &copy; {{site.time | date: "%Y"}}
+      </span>
     </footer>
 </section>
