--- a/_includes/read-more.html
+++ b/_includes/read-more.html
@@ -3,9 +3,17 @@
    {% assign current = page.next %}
    <div class="read-more-item">
        <span class="read-more-item-dim">更近的文章</span>
-       <h2 class="post-list__post-title post-title"><a href="{{ current.url }}" title="link to {{ current.title }}">{{ current.title }}</a></h2>
-       <p class="excerpt">{{ current.content | markdownify | strip_html | strip_newlines | truncate: 250 }}&hellip;</p>
-       <div class="post-list__meta"><time datetime="{{current.date | date: date_to_xmlschema}}" class="post-list__meta--date date">{{current.date | date: "%F"}}</time> &#8226; <span class="post-list__meta--tags tags">{{current.tags | join:' '}}</span><a class="btn-border-small" href={{current.url}}>阅读</a></div>
+       <h2 class="post-list__post-title post-title"><a href="{{ current.url }}" title="{{ current.title }}">{{ current.title }}</a></h2>
+       <!--<p class="excerpt">{{ current.content | markdownify | strip_html | strip_newlines | truncate: 250 }}&hellip;</p>-->
+       <p class="excerpt">{{current.excerpt}}&hellip;</p>
+       <div class="post-list__meta">
+         <time datetime="{{current.date | date: date_to_xmlschema}}" class="post-list__meta--date date">
+           {{current.date | date: "%F"}}
+         </time> &#8226; 
+         <span class="post-list__meta--tags tags">{{current.tags | join:' '}}
+         </span>
+         <a class="btn-border-small" href={{current.url}}>阅读</a>
+       </div>
    </div>
    {% endif %}
    
@@ -14,8 +22,16 @@
    <div class="read-more-item">
        <span class="read-more-item-dim">更早的文章</span>
        <h2 class="post-list__post-title post-title"><a href="{{ current.url }}" title="link to {{ current.title }}">{{ current.title }}</a></h2>
-       <p class="excerpt">{{ current.content | markdownify | strip_html | strip_newlines | truncate: 250 }}&hellip;</p>
-       <div class="post-list__meta"><time datetime="{{current.date | date: date_to_xmlschema}}" class="post-list__meta--date date">{{current.date | date: "%F"}}</time> &#8226; <span class="post-list__meta--tags tags">{{current.tags | join:' '}}</span><a class="btn-border-small" href={{current.url}}>阅读</a></div>
+       <!--<p class="excerpt">{{ current.content | markdownify | strip_html | strip_newlines | truncate: 250 }}&hellip;</p>-->
+       <p class="excerpt">{{current.excerpt}}&hellip;</p>
+       <div class="post-list__meta">
+         <time datetime="{{current.date | date: date_to_xmlschema}}" class="post-list__meta--date date">
+           {{current.date | date: "%F"}}
+         </time> &#8226; 
+         <span class="post-list__meta--tags tags">{{current.tags | join:' '}}
+         </span>
+         <a class="btn-border-small" href={{current.url}}>阅读</a>
+       </div>
    </div>
    {% endif %}
 </section>
