--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,5 +26,6 @@
 
   <meta name="google-site-verification" content="4oKzvLsEe8ubJtqP9L3B-m9she6kdGriOOlbckdcSW8" />
 
-
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
 </head>
