--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <section class="footer">
+    
     <footer>
+        <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
     	<span class="footer__copyright">本站点采用<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a></span>
       <span class="footer__copyright">隔壁老哥直通车：[<a href="http://w22.xyz/">W22</a>]，[<a href="http://www.57q.top/">Ah-Yin</a>]</span>
         <span class="footer__copyright">本站{% if site.creator %}由 {{site.creator}} 创建，{% endif %}Clone自 <a href="https://github.com/linusboyle/linusboyle.github.io">狷墨居</a> - &copy; {{site.time | date: "%Y"}}</span>
