--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
       {% for tag in page.tags %}
       <span class="post-meta__tags tags"><a href="/tags/#{{tag}}">{{tag }}</a></span>
       {% endfor %}
-      <span class="post-header" id="busuanzi_container_page_pv"> | 阅读量：<span id="busuanzi_value_page_pv"></span> 次</span>
+      <span id="busuanzi_container_page_pv"> | 阅读量：<span id="busuanzi_value_page_pv"></span> 次</span>
     </div>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
