--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,9 @@ layout: default
       &#8226;
       {% for tag in page.tags %}
       <span class="post-meta__tags tags"><a href="/tags/#{{tag}}">{{tag }}</a></span>
+       <span class="post-meta__tags tags" id="busuanzi_container_page_pv"> | 阅读量：<span id="busuanzi_value_page_pv"></span> 次</span>
       {% endfor %}
-      <span id="busuanzi_container_page_pv"> | 阅读量：<span id="busuanzi_value_page_pv"></span> 次</span>
+     
     </div>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
