--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,10 +13,10 @@ layout: default
       &#8226;
       {% for tag in page.tags %}
       <span class="post-meta__tags tags"><a href="/tags/#{{tag}}">{{tag }}</a></span>
-      &#8226;
-      <span class="post-meta__tags tags" id="busuanzi_container_page_pv"> | 阅读量：<span id="busuanzi_value_page_pv"></span> 次</span>
+      
       {% endfor %}
-     
+      &#8226;
+      <span id="busuanzi_container_site_pv">本站总访问量：<span id="busuanzi_value_site_pv"></span>次</span>
     </div>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
