--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
       
       {% endfor %}
       &#8226;
-      <span id="busuanzi_value_page_pv"><i class="fa fa-spinner"></i></span> Hits
+      <span id="busuanzi_value_page_pv"><i class="fa fa-spinner"></i></span> 浏览
     </div>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
