--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,7 @@
     	<span class="footer__copyright">本站点采用<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a></span>
       <span class="footer__copyright">隔壁老哥直通车：[<a href="http://w22.xyz/">W22</a>]，[<a href="http://www.57q.top/">Ah-Yin</a>]</span>
         <span class="footer__copyright">本站{% if site.creator %}由 {{site.creator}} 创建，{% endif %}Clone自 <a href="https://github.com/linusboyle/linusboyle.github.io">狷墨居</a> - &copy; {{site.time | date: "%Y"}}</span>
-        <span id="busuanzi_container_site_pv" style='display:none'>
-            本站总访问量<span id="busuanzi_value_site_pv"></span>次
-        </span>
+        <span id="busuanzi_container_site_pv" style='display:none'>本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
 
     </footer>
 </section>
