--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,20 @@ layout: default
     {{ content }}
   </section>
 </article>
+<!--打赏-->
+<script>
+window.tctipConfig = {
+        staticPrefix:   "http://static.tctip.com",
+        buttonImageId:  1,
+        buttonTip:  "zanzhu",
+        list:{
+            alipay: {qrimg: "http://da1sy.github.io/tctip-master/demo/images/alipay.png"},
+            weixin:{qrimg: "http://da1sy.github.io/tctip-master/demo/images/wechat.png"}, 
+        }
+};
+</script>
+
+<script src="http://static.tctip.com/js/tctip.min.js"></script>
 
 <center><a href="javascript:scroll(0,0)">返回顶部</a></center>
 
