--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,8 +36,8 @@ window.tctipConfig = {
         buttonImageId:  1,
         buttonTip:  "zanzhu",
         list:{
-            alipay: {qrimg: "http://da1sy.github.io/tctip-master/demo/images/alipay.png"},
-            weixin:{qrimg: "http://da1sy.github.io/tctip-master/demo/images/wechat.png"}, 
+            alipay: {qrimg: "https://da1sy.github.io/tctip-master/demo/images/alipay.png"},
+            weixin:{qrimg: "https://da1sy.github.io/tctip-master/demo/images/wechat.png"}, 
         }
 };
 </script>
