change visit times to visitor number

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,8 @@
       <span>
         &copy; {{site.time | date: "%Y"}}
       </span>
-      <span id="busuanzi_container_site_pv">
-          本站总访问量<span id="busuanzi_value_site_pv"></span>次
+      <span id="busuanzi_container_site_uv">
+          本站总访问人数:<span id="busuanzi_value_site_uv"></span>
       </span>
     </footer>
 </section>
