feat: add music player support(from music163)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,10 +15,13 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
+
   <section class="post">
     {{ content }}
   </section>
 </article>
+
+{% include music.html %}
 
 <center><a href="javascript:scroll(0,0)">返回顶部</a></center>
 
