feat: change syntax highlight theme to tango
also add some other options

--- a/_sass/vno.scss
+++ b/_sass/vno.scss
@@ -44,4 +44,7 @@
 // ------------------------------
 
 @import 'animate.css';
-@import 'tomorrow.css';
+//@import 'tomorrow.css';
+//@import 'zenburn.css';
+//@import 'monokai.css';
+@import 'tango.css';
