update:update the busuanzi site domain

--- a/_includes/external.html
+++ b/_includes/external.html
@@ -4,7 +4,7 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
-<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 {% if site.ga.id %}
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
