--- a/_includes/external.html
+++ b/_includes/external.html
@@ -17,3 +17,9 @@
   gtag('config', '{{site.ga.id}}');
 </script>
 {% endif %}
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {inlineMath: [['$','$']}
+});
+</script>
