--- a/_includes/external.html
+++ b/_includes/external.html
@@ -20,6 +20,6 @@
 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
-  tex2jax: {inlineMath: [['$','$']}
+  tex2jax: {inlineMath: [['$','$'], ['\(','\)']]}
 });
 </script>
