update css: tag style

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -276,6 +276,7 @@ td:last-child {
   z-index: 800;
   width: 70%;
   margin-left: 30%;
+  background-color:  #f7f9f9 ;
 }
 
   .content-wrapper__inner {
