--- a/_sass/vno.scss
+++ b/_sass/vno.scss
@@ -32,6 +32,7 @@
 @import 'components/post-list.scss';
 @import 'components/forms.scss';
 @import 'components/read-more.scss';
+@import 'components/tag.scss';
 
 // ------------------------------
 // MEDIA QUERIES
