fix: transition of tag.
add more comment on _config.yml

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -20,6 +20,7 @@
     </a>
   </li>
   {% endif %}
+
   {% if site.social.github %}
   <!-- Github -->
   <li class="navigation__item">
@@ -34,7 +35,7 @@
   <!-- bilibili -->
   <li class="navigation__item">
     <a href="https://space.bilibili.com/{{site.social.bilibili}}" title="@{{site.social.bilibili}} 的 B站空间" target="_blank">
-      <i class="fa fa-video-camera"></i>
+      <i class="social fa fa-video-camera"></i>
       <span class="label">Bilibili</span>
     </a>
   </li>
