add scroll button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <div class="content-wrapper">
         <div class="content-wrapper__inner">
             {{ content }}
+            {% include scroll.html %}
             {% include footer.html %}
         </div>
     </div>
