--- a/_sass/vno.scss
+++ b/_sass/vno.scss
@@ -33,6 +33,7 @@
 @import 'components/forms.scss';
 @import 'components/read-more.scss';
 @import 'components/tag.scss';
+@import 'components/scroll.scss';
 
 // ------------------------------
 // MEDIA QUERIES
