add goto bottom button

--- a/_includes/scroll.html
+++ b/_includes/scroll.html
@@ -2,4 +2,7 @@
     <a href="#" title='返回顶部'>
         <i class='fa fa-arrow-up'></i>
     </a>
+    <a href="#footer" title='前往底部'>
+        <i class='fa fa-arrow-down'></i>
+    </a>
 </div>
