--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,8 @@
 <section class="footer">
-    <footer>
-    	<span class="footer__copyright">本站点采用
-        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a>
+    <footer id='footer'>
+    	<span class="footer__copyright"> 本站点采用 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a>
       </span>
-      <span class="footer__copyright">
-        由 <a href="https://jekyllrb.com",target="_blank">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,感谢<a href="https://github.com">Github</a>提供的支持
-      </span>
+      <span class="footer__copyright"> 由 <a href="https://jekyllrb.com",target="_blank">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,感谢<a href="https://github.com">Github</a>提供的支持 </span>
       <span class="footer__copyright">本站
         {% if site.creator.name %}由
           {% if site.creator.extralink %}<a href="{{site.creator.extralink}}">{% endif %}
