--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@ layout: default
   <section class="post">
     {{ content }}
     {% include scroll.html %}
+    {% include copyright.html %}
   </section>
 </article>
 
