--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -153,6 +153,25 @@ code {
   word-wrap: break-word;
 }
 
+/**
+ * Sub/Sup
+ */
+
+sub, sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+
+sup {
+    top: -.5em;
+}
+
+sub {
+    bottom: -.25em;
+}
+
 pre {
   margin-bottom: 1.3em;
   padding: 1em 2.5%;
