--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -295,7 +295,7 @@ td:last-child {
   z-index: 800;
   width: 70%;
   margin-left: 30%;
-  background-color:  #f7f9f9 ;
+  background-color:  #ffffff ;
 }
 
   .content-wrapper__inner {
