--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <section class="footer">
     <footer id='footer'>
-      <span class="footer__copyright"> 本站由 <a href="https://jekyllrb.com",target="_blank">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,感谢<a href="https://cloud.tencent.com/">腾讯云</a>提供的支持 </span>
+      <span class="footer__copyright"> 本站由 <a href="https://jekyllrb.com",target="_blank">Jekyll</a> 于 {{ site.time | date: "%F" }} 生成,感谢<a href="https://github.com">Github</a>提供的支持 </span>
       <span class="footer__copyright">本站
         {% if site.creator.name %}由
           {% if site.creator.extralink %}<a href="{{site.creator.extralink}}">{% endif %}
