--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,8 @@
   <meta property="og:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   
-  <link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon.png" >
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+  <!--<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon.png" >-->
   <!--<link href="/assets/images/favicon.png" rel="shortcut icon" type="image/png">-->
   
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
