--- a/_sass/components/_panels.scss
+++ b/_sass/components/_panels.scss
@@ -25,7 +25,7 @@
   font-size: 1.2em;
   font-weight: lighter;
   letter-spacing: 3px;
-  color: $gray;
+  //color: $gray;
   -webkit-font-smoothing: antialiased;
 }
 
