change the pygment style back to 'tomorrow'

--- a/_sass/vno.scss
+++ b/_sass/vno.scss
@@ -46,9 +46,9 @@
 // ------------------------------
 
 @import 'animate.css';
-//@import 'tomorrow.css';
+@import 'tomorrow.css';
 //@import 'zenburn.css';
 //@import 'monokai.css';
 //@import 'tango.css';
 //@import 'dracula.css';
-@import 'gruvbox.css';
+//@import 'gruvbox.css';
