--- a/_sass/components/_panels.scss
+++ b/_sass/components/_panels.scss
@@ -40,7 +40,7 @@
   width: 100%;
   max-width: none;
   height: 100%;
-  background: url(../images/background-cover.jpg) top left no-repeat $gray-darker;
+  background: url(/assets/images/background-cover.jpg) top left no-repeat $gray-darker;
   background-size: cover;
 }
 
